--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,2 +1,196 @@
+@import url(http://fonts.googleapis.com/css?family=Droid+Serif:400,700.css);
+.clearfix:after {
+  content: " ";
+  /* Older browser do not support empty content */
+  visibility: hidden;
+  display: block;
+  height: 0;
+  clear: both; }
+
+/* Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  margin: 0;
+  padding: 0; }
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block; }
+
 body {
-  background-color: #333333; }
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after, q:before, q:after {
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+/* Screen Sizes */
+/* Colors */
+body {
+  font-family: 'Droid Serif', serif;
+  background-color: #49B5BB; }
+
+.content {
+  background-color: #ECF8E7;
+  padding: 30px; }
+  .content p {
+    line-height: 30px; }
+
+a {
+  color: black;
+  text-decoration: none; }
+
+.row {
+  margin-top: 20px;
+  margin-bottom: 20px; }
+
+.nav {
+  text-align: center; }
+
+.nav li {
+  display: inline-block;
+  padding-right: 35px;
+  padding-top: 15px;
+  padding-bottom: 15px; }
+
+h1 {
+  text-transform: uppercase;
+  text-align: center;
+  color: #49B5BB;
+  display: block;
+  width: 100%; }
+
+h2 {
+  margin-bottom: 12px; }
+  h2 a {
+    font-size: 33px;
+    border-bottom-style: dashed;
+    border-bottom-width: 1px;
+    border-color: #49B5BB;
+    padding-bottom: 1px; }
+
+h3 {
+  color: #2F8F97;
+  margin-bottom: 40px; }
+  h3 a {
+    border-bottom-style: dashed;
+    border-bottom-width: 1px;
+    border-color: #49B5BB; }
+
+.footer_links {
+  background-color: #ECF8E7;
+  text-align: center; }
+  .footer_links li {
+    display: inline-block; }
+
+aside {
+  padding-right: 30px;
+  padding-left: 30px;
+  padding-bottom: 20px; }
+  aside h4 {
+    color: #2F8F97;
+    font-size: 20px;
+    margin-bottom: 15px; }
+  aside p {
+    margin-bottom: 40px; }
+  aside a {
+    display: block;
+    background-color: #2F8F97;
+    color: #49B5BB;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center; }
+
+/*------------mobile view------------*/
+@media only screen and (max-width: 640px) {
+  body {
+    background-color: #ECF8E7; }
+  .row .nav {
+    display: none; }
+  h1 {
+    background-color: #2F8F97;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    font-size: 12px;
+    letter-spacing: 2px; }
+  aside {
+    display: none; }
+  .left {
+    display: none; }
+  .footer_links {
+    border-top: 1px solid #49B5BB; }
+    .footer_links li {
+      padding-right: 10px;
+      padding-top: 20px;
+      padding-bottom: 20px; } }
+
+/*------------tablet view------------*/
+@media only screen and (min-width: 641px) and (max-width: 960px) {
+  body {
+    background-color: #ECF8E7; }
+  h1 {
+    border-top: 1px solid #49B5BB;
+    border-bottom: 1px solid #49B5BB;
+    padding-bottom: 30px;
+    padding-top: 30px; }
+  .footer_links {
+    border-top: 1px solid #49B5BB; }
+    .footer_links li {
+      padding-right: 10px;
+      padding-top: 20px;
+      padding-bottom: 20px; }
+  .left {
+    display: none; } }
+
+/*------------tablet view------------*/
+@media only screen and (min-width: 961px) {
+  .nav {
+    margin-top: 30px; }
+  .row {
+    background-color: #ECF8E7;
+    margin: 0 80px; }
+  h1 {
+    border-top: 1px solid #49B5BB;
+    border-bottom: 1px solid #49B5BB;
+    padding-bottom: 30px;
+    padding-top: 30px; }
+  .footer_links {
+    border-top: 1px solid #49B5BB; }
+    .footer_links li {
+      padding-right: 10px;
+      padding-top: 20px;
+      padding-bottom: 20px; }
+  .content {
+    border-right: 1px solid #49B5BB;
+    display: inline-block;
+    box-sizing: border-box;
+    width: 75%;
+    float: left; }
+  aside {
+    display: inline-block;
+    box-sizing: border-box;
+    width: 25%;
+    float: right;
+    line-height: 25px;
+    padding-top: 30px; }
+    aside a {
+      padding-top: 15px;
+      padding-bottom: 15px; }
+  .left {
+    float: right;
+    box-sizing: border-box; }
+  .right {
+    width: 30%;
+    float: left;
+    box-sizing: border-box; } }
