--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,6 +2,7 @@
 @import "http://fonts.googleapis.com/css?family=Droid+Serif:400,700.css";
 @import "partials/mystuff";
 
+/*------------global------------*/
 
 body {
   font-family: 'Droid Serif', serif;
@@ -121,6 +122,11 @@ aside {
     background-color: $white-background;
   }
 
+  .row {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
   .row .nav{
     display: none;
   }
@@ -192,11 +198,12 @@ aside {
   .row {
     background-color: $white-background;
     margin: 0 80px;
+    border-bottom: 1px solid $main-body-bg;
   }
 
   h1 {
-    border-top: 1px solid $main-body-bg;
-    border-bottom: 1px solid $main-body-bg;
+    // border-top: 1px solid $main-body-bg;
+    // border-bottom: 1px solid $main-body-bg;
     padding-bottom: 30px;
     padding-top: 30px
   }
@@ -213,6 +220,7 @@ aside {
 
   .content {
     border-right: 1px solid $main-body-bg;
+    // border-bottom: 1px solid $main-body-bg;
     display: inline-block;
     box-sizing: border-box;
     width: 75%;
@@ -237,11 +245,20 @@ aside {
   .left {
     float: right;
     box-sizing: border-box;
+
+    p {
+      margin-top: 22px;
+      padding-right: 30px;
+    }
   }
 
   .right {
     width: 30%;
     float: left;
     box-sizing: border-box;
+  }
+
+  .footer_links {
+    border: none;
   }
 }
